--- a/src/assets/CSS/global.css
+++ b/src/assets/CSS/global.css
@@ -15,3 +15,15 @@ html,body,#app{
 .el-cascader-menu{
     height: 400px;
 }
+.el-steps{
+    margin: 15px 0;
+}
+.el-step__title{
+    font-size: 20px;
+  }
+.el-tag{
+    margin: 10px;
+}
+.ql-editor{
+    min-height: 300px;
+}
